feat: :art: Add frontends to the various microservices

--- a/Frontend/src/index.css
+++ b/Frontend/src/index.css
@@ -1,25 +1,28 @@
-/* index.css - Estilos globales */
 
 body {
   font-family: Arial, sans-serif;
-  background: linear-gradient(120deg, #0077b6, #20c6e8); /* Gradiente azul salud */
-  background-attachment: fixed; /* Fondo fijo */
-  background-size: cover; /* Ajustar el tamaño del fondo */
-  height: 100vh;
+  background: linear-gradient(120deg, #0077b6, #20c6e8);
+  background-attachment: fixed;
+  background-size: cover;
+  margin: 0;
+  padding: 0;
+  min-height: 100vh;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 0;
+  overflow: hidden;
 }
+
 
 html {
   height: 100%;
-  overflow-y: auto; /* Habilitar desplazamiento vertical si hay muchos elementos */
+  overflow-y: auto;
 }
 
 a {
   text-decoration: none;
-  color: #0077b6; /* Azul profesional */
+  color: #0077b6;
 }
 
 a:hover {
